Add angular-bootstrap and update client filtering

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -37,9 +37,9 @@
             </button>
         </div>
         <div class="p-1 mt-auto" *ngIf="!isCollapsed">
-            <span class="text-light">
-                Version 1.2.0
-            </span>
+            <small class="text-light">
+                Version 1.2.1
+            </small>
         </div>
         <div class="p-1 border-top border-secondary" [class]="{'mt-auto': isCollapsed}">
             <button class="sidbar-button btn" (click)="handleSideBarCollapse()" title="Collapse Sidebar">
