--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -3,7 +3,10 @@
         <div class="col-12">
             <div class="d-flex align-items-center">
                 <h3 class="mb-0">Clients</h3>
-                <button class="btn btn-primary ms-auto" (click)="openClientFormDialog(0)">
+                <button class="btn btn-outline-primary ms-auto">
+                    <i class="fa-solid fa-download me-2"></i>Export List
+                </button>
+                <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)">
                     <i class="fa-solid fa-plus me-2"></i>Add New Client
                 </button>
             </div>
@@ -13,36 +16,51 @@
         </div>
         <div class="col-12 mb-3">
             <div class="d-flex align-items-center">
-                <div class="input-group" style="max-width: 300px; min-width: 200px;">
-                    <span class="input-group-text"><i class="fa-solid fa-search"></i></span>
-                    <input type="text" class="form-control" placeholder="Search..." (keyup)="searchClients($event)">
+                <div class="input-group flex-nowrap" style="max-width: 300px; min-width: 200px;">
+                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-search"></i></span>
+                    <input type="text" class="form-control" placeholder="Search..."
+                        (keyup.enter)="searchClients($event)">
                 </div>
-                <strong class="ms-2">{{clients.length}} results found</strong>
+                <strong class="mx-2">{{clients.length}} results found</strong>
                 <div class="dropdown ms-auto">
-                    <button class="btn" data-bs-toggle="dropdown">
-                        Last Contacted: <b>{{lastContactedPeriod}}</b> <i class="fa-solid fa-caret-down ms-2"></i>
+                    <button class="btn border" data-bs-toggle="dropdown">
+                        <span class="me-2">Last Contacted:</span>  
+                        <b class="text-capitalize">{{lastContacted}}</b> 
+                        <i class="fa-solid fa-caret-down ms-2"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('All')">All</a></li>
-                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('Today')">Today</a></li>
-                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('Yesterday')">Yesterday</a></li>
+                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('all')">All</a></li>
+                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('today')">Today</a></li>
+                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('yesterday')">Yesterday</a>
+                        </li>
+                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('ascending')">Ascending</a>
+                        </li>
+                        <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('descending')">Descending</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="dropdown ms-2">
-                    <button class="btn" data-bs-toggle="dropdown">
-                        Follow Up: <b>{{followUpPeriod}}</b> <i class="fa-solid fa-caret-down ms-2"></i>
+                    <button class="btn border" data-bs-toggle="dropdown">
+                        <span class="me-2">Follow Up:</span>
+                        <b class="text-capitalize">{{followUp}}</b>
+                        <i class="fa-solid fa-caret-down ms-2"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('All')">All</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Today')">Today</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Tomorrow')">Tomorrow</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Overdue')">Overdue</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('all')">All</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('today')">Today</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('tomorrow')">Tomorrow</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('overdue')">Overdue</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('ascending')">Ascending</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('descending')">Descending</a></li>
                     </ul>
                 </div>
-                <button class="btn ms-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-                    <i class="fa-solid fa-filter me-2"></i>Filters
+                <button class="btn border ms-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
+                    <i class="fa-solid fa-filter me-2"></i>Show Filters
                 </button>
-                <button class="btn ms-2" (click)="refreshClientList()">
+                <button class="btn border ms-2" (click)="clearFilters()">
+                    <i class="fa-solid fa-filter-circle-xmark me-2"></i>Clear Filters
+                </button>
+                <button class="btn border ms-2" (click)="refreshClientList()">
                     <i class="fa-solid fa-refresh me-2"></i>Refresh
                 </button>
             </div>
@@ -50,13 +68,16 @@
         <div class="col-12">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" data-bs-toggle="tab" (click)="filterByStatus('all')">All</button>
+                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('all')"
+                        [class]="{'active': status == 'all'}">All</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('active')">Active</button>
+                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('active')"
+                        [class]="{'active': status == 'active'}">Active</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('inactive')">Inactive</button>
+                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('inactive')"
+                        [class]="{'active': status == 'inactive'}">Inactive</button>
                 </li>
             </ul>
             <table class="table table-striped table-hover">
@@ -75,8 +96,7 @@
                 <tbody>
                     <tr *ngIf="gettingClientSet">
                         <td colspan="12" class="text-center">
-                            <span class="spinner-border spinner-border-sm me-2"></span>
-                            <span>Loading data...</span>
+                            <app-loading-indicator [message]="loadingClientsMessage"></app-loading-indicator>
                         </td>
                     </tr>
                     <tr *ngIf="clients.length == 0 && !gettingClientSet">
@@ -91,15 +111,13 @@
                         </td>
                         <td>{{client.companyName}}</td>
                         <td class="text-wrap" style="max-width: 300px;">
-                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;">Investor</span>
-                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;">Retail</span>
-                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;">Devloper</span>
-                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;">Schools</span>
-                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;">Flats</span>
+                            <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;"
+                                *ngFor="let tag of client.tagArray">{{tag}}</span>
                         </td>
                         <td style="max-width: 120px" class="text-truncate">
                             <span class="d-block">{{client.dateLastContacted | date: "mediumDate"}}</span>
-                            <small class="text-muted" *ngIf="client.lastContactedDays! < -1">{{client.lastContactedDays! * -1}} days ago</small>
+                            <small class="text-muted" *ngIf="client.lastContactedDays! < -1">{{client.lastContactedDays!
+                                * -1}} days ago</small>
                             <small class="text-muted" *ngIf="client.lastContactedDays! == -1">Yesterday</small>
                             <small class="text-muted" *ngIf="client.lastContactedDays! == 0">Today</small>
                         </td>
@@ -113,53 +131,67 @@
                                     *ngIf="client.followUpDays! == 0 && client.isActive"></i>
                                 {{client.dateFollowUp | date: "mediumDate"}}
                             </span>
-                            <small class="text-muted" *ngIf="client.followUpDays! < -1">Due {{client.followUpDays! * -1}} days ago</small>
+                            <small class="text-muted" *ngIf="client.followUpDays! < -1">{{client.followUpDays! * -1}}
+                                days overdue </small>
                             <small class="text-muted" *ngIf="client.followUpDays! == -1">Due yesterday</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! == 0">Today</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! == 1">Tomorrow</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! > 1">Due in {{client.followUpDays!}} days</small>
+                            <small class="text-muted" *ngIf="client.followUpDays! == 0">Due today</small>
+                            <small class="text-muted" *ngIf="client.followUpDays! == 1">Due tomorrow</small>
+                            <small class="text-muted" *ngIf="client.followUpDays! > 1">Due in {{client.followUpDays!}}
+                                days</small>
                         </td>
                         <td style="max-width: 120px" class="text-truncate d-none">
                             <span class="d-block">{{client.dateUpdated | date: "mediumDate"}}</span>
                             <small class="text-muted" *ngIf="client.updatedDays! == 0">Today by</small>
                             <small class="text-muted" *ngIf="client.updatedDays! == -1">Yesterday by</small>
-                            <small class="text-muted" *ngIf="client.updatedDays! < -1">{{client.updatedDays! * -1}} days ago by</small>
-                            <small class="text-muted d-block">{{client.lastEditor!.name}} {{client.lastEditor!.surname}}</small>
+                            <small class="text-muted" *ngIf="client.updatedDays! < -1">{{client.updatedDays! * -1}} days
+                                ago by</small>
+                            <small class="text-muted d-block">{{client.lastEditor!.name}}
+                                {{client.lastEditor!.surname}}</small>
                         </td>
-                        <td style="width: 10px;">
-                            <span *ngIf="client.isActive" class="badge rounded-pill bg-transparent-success">Active</span>
-                            <span *ngIf="!client.isActive" class="badge rounded-pill bg-transparent-danger">Inactive</span>
+                        <td style="max-width: 50px;">
+                            <span *ngIf="client.isActive"
+                                class="badge rounded-pill bg-transparent-success">Active</span>
+                            <span *ngIf="!client.isActive"
+                                class="badge rounded-pill bg-transparent-danger">Inactive</span>
                         </td>
-                        <td>
+                        <td style="width: 0px;">
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-secondary me-2">Details</button>
                                 <div class="dropdown">
-                                    <button class="btn btn-outline-secondary" data-bs-toggle="dropdown">
-                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    <button class="btn" data-bs-toggle="dropdown">
+                                        <i class="fa-solid fa-ellipsis"></i>
                                     </button>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <button class="dropdown-item" (click)="openClientFormDialog(client.id)"><i
-                                                    class="fa-solid fa-pen me-2"></i>Edit</button>
+                                            <button class="dropdown-item">
+                                                <i class="fa-solid fa-folder-open me-2"></i>
+                                                Details
+                                            </button>
+                                        </li>
+                                        <li>
+                                            <button class="dropdown-item" (click)="openClientFormDialog(client.id)">
+                                                <i class="fa-solid fa-pen me-2"></i>
+                                                Edit
+                                            </button>
                                         </li>
                                         <li>
                                             <button class="dropdown-item" (click)="updateClientStatus(client)"
-                                                *ngIf="!client.isActive"><i
-                                                    class="fa-solid fa-circle-check me-2"></i>Mark
-                                                Active</button>
+                                                *ngIf="!client.isActive">
+                                                <i class="fa-solid fa-circle-check me-2"></i>
+                                                Mark Active
+                                            </button>
                                         </li>
                                         <hr class="dropdown-divider">
                                         <li>
                                             <button class="dropdown-item text-danger"
-                                                (click)="updateClientStatus(client)" *ngIf="client.isActive"><i
-                                                    class="fa-solid fa-circle-xmark me-2"></i>Mark
-                                                Inactive
+                                                (click)="updateClientStatus(client)" *ngIf="client.isActive">
+                                                <i class="fa-solid fa-circle-xmark me-2"></i>
+                                                Mark Inactive
                                             </button>
                                         </li>
                                         <li>
-                                            <button class="dropdown-item text-danger"
-                                                (click)="openDeleteClientDialog(client.id)"><i
-                                                    class="fa-solid fa-trash me-2"></i>Delete
+                                            <button class="dropdown-item text-danger" (click)="deleteClient(client.id)">
+                                                <i class="fa-solid fa-trash me-2"></i>
+                                                Delete
                                             </button>
                                         </li>
                                     </ul>
@@ -174,11 +206,11 @@
 </div>
 
 <div class="offcanvas offcanvas-end " data-bs-scroll="true" data-bs-backdrop="false" id="offcanvasScrolling">
-    <div class="offcanvas-header align-items-center border-bottom">
-        <h5 class="offcanvas-title">Client Filters</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <div class="offcanvas-header border-bottom">
+        <h5 class="offcanvas-title">Filters</h5>
+        <button class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
     </div>
-    <div class="offcanvas-body p-0">
-
+    <div class="offcanvas-body">
+        Content for the offcanvas goes here.
     </div>
 </div>
