--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -2,8 +2,17 @@
     <div class="row">
         <div class="col-12">
             <div class="d-flex align-items-center">
-                <h3 class="mb-0">Clients</h3>
-                <button class="btn btn-outline-primary ms-auto">
+                <h3 class="mb-0 me-2">Clients</h3>
+                <button class="btn btn-outline-primary ms-auto" ngbTooltip="Show Filters" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
+                    <i class="fa-solid fa-filter"></i>
+                </button>
+                <button class="btn btn-outline-primary ms-2" ngbTooltip="Clear Filters" (click)="clearFilters()">
+                    <i class="fa-solid fa-filter-circle-xmark"></i>
+                </button>
+                <button class="btn btn-outline-primary ms-2" ngbTooltip="Refresh Page" (click)="refreshClientList()">
+                    <i class="fa-solid fa-refresh"></i>
+                </button>
+                <button class="btn btn-outline-primary ms-2">
                     <i class="fa-solid fa-download me-2"></i>Export List
                 </button>
                 <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)">
@@ -16,14 +25,14 @@
         </div>
         <div class="col-12 mb-3">
             <div class="d-flex align-items-center">
-                <div class="input-group flex-nowrap" style="max-width: 300px; min-width: 200px;">
+                <div class="input-group flex-nowrap" style="max-width: 300px; min-width: 120px;">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-search"></i></span>
                     <input type="text" class="form-control" placeholder="Search..."
                         (keyup.enter)="searchClients($event)">
                 </div>
                 <strong class="mx-2">{{clients.length}} results found</strong>
                 <div class="dropdown ms-auto">
-                    <button class="btn border" data-bs-toggle="dropdown">
+                    <button class="btn" data-bs-toggle="dropdown">
                         <span class="me-2">Last Contacted:</span>  
                         <b class="text-capitalize">{{lastContacted}}</b> 
                         <i class="fa-solid fa-caret-down ms-2"></i>
@@ -40,7 +49,7 @@
                     </ul>
                 </div>
                 <div class="dropdown ms-2">
-                    <button class="btn border" data-bs-toggle="dropdown">
+                    <button class="btn" data-bs-toggle="dropdown">
                         <span class="me-2">Follow Up:</span>
                         <b class="text-capitalize">{{followUp}}</b>
                         <i class="fa-solid fa-caret-down ms-2"></i>
@@ -54,15 +63,6 @@
                         <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('descending')">Descending</a></li>
                     </ul>
                 </div>
-                <button class="btn border ms-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-                    <i class="fa-solid fa-filter me-2"></i>Show Filters
-                </button>
-                <button class="btn border ms-2" (click)="clearFilters()">
-                    <i class="fa-solid fa-filter-circle-xmark me-2"></i>Clear Filters
-                </button>
-                <button class="btn border ms-2" (click)="refreshClientList()">
-                    <i class="fa-solid fa-refresh me-2"></i>Refresh
-                </button>
             </div>
         </div>
         <div class="col-12">
