--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
             </button>
         </div>
     </div>
-    <div class="d-flex flex-column overflow-auto border-top" style="width: 100%; height: 100vh;">
+    <div class="d-flex flex-column border-top" style="width: 100%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
         <router-outlet></router-outlet>
     </div>
 </div>
