--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -162,7 +162,7 @@
                                     </button>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <button class="dropdown-item">
+                                            <button class="dropdown-item" (click)="openClientDetailsDialog(client.id)">
                                                 <i class="fa-solid fa-folder-open me-2"></i>
                                                 Details
                                             </button>
