--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -12,8 +12,8 @@
                 <button class="btn btn-outline-primary ms-2" ngbTooltip="Refresh Page" (click)="refreshClientList()">
                     <i class="fa-solid fa-refresh"></i>
                 </button>
-                <button class="btn btn-outline-primary ms-2">
-                    <i class="fa-solid fa-download me-2"></i>Export List
+                <button class="btn btn-outline-primary ms-2" ngbTooltip="Export List">
+                    <i class="fa-solid fa-download"></i>
                 </button>
                 <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)">
                     <i class="fa-solid fa-plus me-2"></i>Add New Client
@@ -28,10 +28,25 @@
                 <div class="input-group flex-nowrap" style="max-width: 300px; min-width: 120px;">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-search"></i></span>
                     <input type="text" class="form-control" placeholder="Search..."
-                        (keyup.enter)="searchClients($event)">
+                        (keyup)="searchClients($event)">
                 </div>
                 <strong class="mx-2">{{clients.length}} results found</strong>
                 <div class="dropdown ms-auto">
+                    <button class="btn" data-bs-toggle="dropdown">
+                        <span class="me-2">Follow Up:</span>
+                        <b class="text-capitalize">{{followUp}}</b>
+                        <i class="fa-solid fa-caret-down ms-2"></i>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('all')">All</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('today')">Today</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('tomorrow')">Tomorrow</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('overdue')">Overdue</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('ascending')">Ascending</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('descending')">Descending</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown ms-2">
                     <button class="btn" data-bs-toggle="dropdown">
                         <span class="me-2">Last Contacted:</span>  
                         <b class="text-capitalize">{{lastContacted}}</b> 
@@ -46,21 +61,6 @@
                         </li>
                         <li><a class="dropdown-item" (click)="filterByLastContactedPeriod('descending')">Descending</a>
                         </li>
-                    </ul>
-                </div>
-                <div class="dropdown ms-2">
-                    <button class="btn" data-bs-toggle="dropdown">
-                        <span class="me-2">Follow Up:</span>
-                        <b class="text-capitalize">{{followUp}}</b>
-                        <i class="fa-solid fa-caret-down ms-2"></i>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('all')">All</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('today')">Today</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('tomorrow')">Tomorrow</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('overdue')">Overdue</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('ascending')">Ascending</a></li>
-                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('descending')">Descending</a></li>
                     </ul>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                         <td>{{client.companyName}}</td>
                         <td class="text-wrap" style="max-width: 300px;">
                             <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;"
-                                *ngFor="let tag of client.tagArray">{{tag}}</span>
+                                *ngFor="let tag of client.tagArray" [ngClass]="{'bg-primary text-white': highlighIfInTagFilter(tag)}" >{{tag}}</span>
                         </td>
                         <td style="max-width: 120px" class="text-truncate">
                             <span class="d-block">{{client.dateLastContacted | date: "mediumDate"}}</span>
@@ -150,9 +150,9 @@
                         </td>
                         <td style="max-width: 50px;">
                             <span *ngIf="client.isActive"
-                                class="badge rounded-pill bg-transparent-success">Active</span>
+                                class="badge rounded-pill bg-transparent-success" [ngClass]="{'bg-success text-white': status=='active'}">Active</span>
                             <span *ngIf="!client.isActive"
-                                class="badge rounded-pill bg-transparent-danger">Inactive</span>
+                                class="badge rounded-pill bg-transparent-danger" [ngClass]="{'bg-danger text-white': status=='inactive'}">Inactive</span>
                         </td>
                         <td style="width: 0px;">
                             <div class="d-flex justify-content-end">
@@ -171,6 +171,12 @@
                                             <button class="dropdown-item" (click)="openClientFormDialog(client.id)">
                                                 <i class="fa-solid fa-pen me-2"></i>
                                                 Edit
+                                            </button>
+                                        </li>
+                                        <li>
+                                            <button class="dropdown-item">
+                                                <i class="fa-solid fa-note-sticky me-2"></i>
+                                                Notes
                                             </button>
                                         </li>
                                         <li>
@@ -211,6 +217,6 @@
         <button class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body">
-        Content for the offcanvas goes here.
+        <app-client-filters></app-client-filters>
     </div>
 </div>
