--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -53,7 +53,7 @@
                         </td>
                         <td class="text-end">
                             <div class="dropdown">
-                                <button class="btn" data-bs-toggle="dropdown">
+                                <button class="btn" data-bs-toggle="dropdown" ngbTooltip="Actions" placement="bottom">
                                     <i class="fa-solid fa-ellipsis"></i>
                                 </button>
                                 <ul class="dropdown-menu">
