--- a/src/app/components/clients/client-details/client-details.component.html
+++ b/src/app/components/clients/client-details/client-details.component.html
@@ -6,7 +6,7 @@
     <app-loading-indicator [message]="loadingClientMessage"></app-loading-indicator>
 </div>
 <div class="modal-body" *ngIf="!gettingClient">
-    <table class="mb-0 table table-borderless">
+    <table class="mb-0 info-table">
         <tbody>
             <tr>
                 <th>Full name:</th>
@@ -36,6 +36,13 @@
                 <td>{{client.telNumber}}</td>
             </tr>
             <tr>
+                <th>Status:</th>
+                <td>
+                    <span *ngIf="client.isActive" class="badge rounded-pill bg-transparent-success">Active</span>
+                    <span *ngIf="!client.isActive" class="badge rounded-pill bg-transparent-danger">Inactive</span>
+                </td>
+            </tr>
+            <tr>
                 <th>Date added:</th>
                 <td>{{client.dateAdded | date: "mediumDate"}}</td>
             </tr>
@@ -47,10 +54,14 @@
                 <th>Follow up date:</th>
                 <td>{{client.dateFollowUp | date: "mediumDate"}}</td>
             </tr>
+            <tr>
+                <th>Last Editor:</th>
+                <td>{{client.lastEditor!.name}} {{client.lastEditor!.surname}}</td>
+            </tr>
         </tbody>
     </table>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn" (click)="closeModal('dismiss')">Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="openEditClientModal()" [disabled]="gettingClient">Edit Details</button>
+    <button type="button" class="btn btn-primary" (click)="openEditClientModal()" [disabled]="gettingClient">Edit Client Details</button>
 </div>
