--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -3,17 +3,18 @@
         <div class="col-12">
             <div class="d-flex align-items-center">
                 <h3 class="mb-0 me-2">Clients</h3>
-                <button class="btn btn-outline-primary ms-auto" ngbTooltip="Show Filters" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-                    <i class="fa-solid fa-filter"></i>
+                <button class="btn btn-outline-primary ms-auto" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasScrolling">
+                    <i class="fa-solid fa-filter me-2"></i>Show Filters
                 </button>
-                <button class="btn btn-outline-primary ms-2" ngbTooltip="Clear Filters" (click)="clearFilters()">
-                    <i class="fa-solid fa-filter-circle-xmark"></i>
+                <button class="btn btn-outline-primary ms-2" (click)="clearFilters()">
+                    <i class="fa-solid fa-filter-circle-xmark me-2"></i>Clear Filters
                 </button>
-                <button class="btn btn-outline-primary ms-2" ngbTooltip="Refresh Page" (click)="refreshClientList()">
-                    <i class="fa-solid fa-refresh"></i>
+                <button class="btn btn-outline-primary ms-2" (click)="refreshClientList()">
+                    <i class="fa-solid fa-refresh me-2"></i>Refresh Page
                 </button>
-                <button class="btn btn-outline-primary ms-2" ngbTooltip="Export List">
-                    <i class="fa-solid fa-download"></i>
+                <button class="btn btn-outline-primary ms-2">
+                    <i class="fa-solid fa-download me-2"></i>Export List
                 </button>
                 <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)">
                     <i class="fa-solid fa-plus me-2"></i>Add New Client
@@ -27,11 +28,22 @@
             <div class="d-flex align-items-center">
                 <div class="input-group flex-nowrap" style="max-width: 300px; min-width: 120px;">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-search"></i></span>
-                    <input type="text" class="form-control" placeholder="Search..."
-                        (keyup)="searchClients($event)">
+                    <input type="text" class="form-control" placeholder="Search..." (keyup)="searchClients($event)">
                 </div>
                 <strong class="mx-2">{{clients.length}} results found</strong>
                 <div class="dropdown ms-auto">
+                    <button class="btn" data-bs-toggle="dropdown">
+                        <span class="me-2">Status:</span>
+                        <b class="text-capitalize">{{status}}</b>
+                        <i class="fa-solid fa-caret-down ms-2"></i>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" (click)="filterByStatus('all')">All</a></li>
+                        <li><a class="dropdown-item" (click)="filterByStatus('active')">Active</a></li>
+                        <li><a class="dropdown-item" (click)="filterByStatus('inactive')">Inactive</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown ms-2">
                     <button class="btn" data-bs-toggle="dropdown">
                         <span class="me-2">Follow Up:</span>
                         <b class="text-capitalize">{{followUp}}</b>
@@ -48,8 +60,8 @@
                 </div>
                 <div class="dropdown ms-2">
                     <button class="btn" data-bs-toggle="dropdown">
-                        <span class="me-2">Last Contacted:</span>  
-                        <b class="text-capitalize">{{lastContacted}}</b> 
+                        <span class="me-2">Last Contacted:</span>
+                        <b class="text-capitalize">{{lastContacted}}</b>
                         <i class="fa-solid fa-caret-down ms-2"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -66,20 +78,6 @@
             </div>
         </div>
         <div class="col-12">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('all')"
-                        [class]="{'active': status == 'all'}">All</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('active')"
-                        [class]="{'active': status == 'active'}">Active</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('inactive')"
-                        [class]="{'active': status == 'inactive'}">Inactive</button>
-                </li>
-            </ul>
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
@@ -112,32 +110,42 @@
                         <td>{{client.companyName}}</td>
                         <td class="text-wrap" style="max-width: 300px;">
                             <span class="badge rounded-pill bg-transparent-primary" style="margin: 1px;"
-                                *ngFor="let tag of client.tagArray" [ngClass]="{'bg-primary text-white': highlighIfInTagFilter(tag)}" >{{tag}}</span>
+                                *ngFor="let tag of client.tagArray"
+                                [ngClass]="{'bg-primary text-white': highlighIfInTagFilter(tag)}">{{tag}}</span>
                         </td>
                         <td style="max-width: 120px" class="text-truncate">
-                            <span class="d-block">{{client.dateLastContacted | date: "mediumDate"}}</span>
+                            <span class="d-block">
+                                {{client.dateLastContacted | date: "mediumDate"}}
+                            </span>
                             <small class="text-muted" *ngIf="client.lastContactedDays! < -1">{{client.lastContactedDays!
                                 * -1}} days ago</small>
                             <small class="text-muted" *ngIf="client.lastContactedDays! == -1">Yesterday</small>
                             <small class="text-muted" *ngIf="client.lastContactedDays! == 0">Today</small>
                         </td>
                         <td style="max-width: 120px" class="text-truncate">
-                            <span class="d-block">
-                                <i class="fa-solid fa-circle-exclamation text-danger me-1"
-                                    *ngIf="client.followUpDays! < 0 && client.isActive"></i>
-                                <i class="fa-solid fa-triangle-exclamation text-warning me-1"
-                                    *ngIf="client.followUpDays! == 1 && client.isActive"></i>
-                                <i class="fa-solid fa-comment-dots text-success me-1"
-                                    *ngIf="client.followUpDays! == 0 && client.isActive"></i>
-                                {{client.dateFollowUp | date: "mediumDate"}}
-                            </span>
-                            <small class="text-muted" *ngIf="client.followUpDays! < -1">{{client.followUpDays! * -1}}
-                                days overdue </small>
-                            <small class="text-muted" *ngIf="client.followUpDays! == -1">Due yesterday</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! == 0">Due today</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! == 1">Due tomorrow</small>
-                            <small class="text-muted" *ngIf="client.followUpDays! > 1">Due in {{client.followUpDays!}}
-                                days</small>
+
+                            <div class="d-flex align-items-center">
+                                <span *ngIf="client.isActive">
+                                    <i class="fa-solid fa-circle-exclamation text-danger me-1"
+                                        *ngIf="client.followUpDays! < 0"></i>
+                                    <i class="fa-solid fa-triangle-exclamation text-warning me-1"
+                                        *ngIf="client.followUpDays! == 1"></i>
+                                    <i class="fa-solid fa-comment-dots text-success me-1"
+                                        *ngIf="client.followUpDays! == 0"></i>
+                                </span>
+                                <span>{{client.dateFollowUp | date: "mediumDate"}}</span>
+                            </div>
+                            <div class="d-block">
+                                <small class="text-muted" *ngIf="client.followUpDays! < -1">{{client.followUpDays! *
+                                    -1}}
+                                    days overdue </small>
+                                <small class="text-muted" *ngIf="client.followUpDays! == -1">Due yesterday</small>
+                                <small class="text-muted" *ngIf="client.followUpDays! == 0">Due today</small>
+                                <small class="text-muted" *ngIf="client.followUpDays! == 1">Due tomorrow</small>
+                                <small class="text-muted" *ngIf="client.followUpDays! > 1">Due in
+                                    {{client.followUpDays!}}
+                                    days</small>
+                            </div>
                         </td>
                         <td style="max-width: 120px" class="text-truncate d-none">
                             <span class="d-block">{{client.dateUpdated | date: "mediumDate"}}</span>
@@ -149,15 +157,15 @@
                                 {{client.lastEditor!.surname}}</small>
                         </td>
                         <td style="max-width: 50px;">
-                            <span *ngIf="client.isActive"
-                                class="badge rounded-pill bg-transparent-success" [ngClass]="{'bg-success text-white': status=='active'}">Active</span>
-                            <span *ngIf="!client.isActive"
-                                class="badge rounded-pill bg-transparent-danger" [ngClass]="{'bg-danger text-white': status=='inactive'}">Inactive</span>
+                            <span *ngIf="client.isActive" class="badge rounded-pill bg-transparent-success"
+                                [ngClass]="{'bg-success text-white': status=='active'}">Active</span>
+                            <span *ngIf="!client.isActive" class="badge rounded-pill bg-transparent-danger"
+                                [ngClass]="{'bg-danger text-white': status=='inactive'}">Inactive</span>
                         </td>
                         <td style="width: 0px;">
                             <div class="d-flex justify-content-end">
                                 <div class="dropdown">
-                                    <button class="btn" data-bs-toggle="dropdown">
+                                    <button class="btn" data-bs-toggle="dropdown" ngbTooltip="Actions" placement="bottom">
                                         <i class="fa-solid fa-ellipsis"></i>
                                     </button>
                                     <ul class="dropdown-menu">
