--- a/src/app/components/modal-confirm/modal-confirm.component.html
+++ b/src/app/components/modal-confirm/modal-confirm.component.html
@@ -1,11 +1,11 @@
-<div class="modal-header">
+<div class="modal-header border-bottom-0">
     <h5 class="modal-title"><i class="{{iconClass}} me-2 text-{{themeClass}}"></i>{{title}}</h5>
-    <button type="button" class="btn-close" (click)="closeModal('dismiss')"></button>
+    <button class="btn p-0" ngbTooltip="Close" placement="bottom" (click)="closeModal('dismiss')"><i class="fa-solid fa-xmark" style="font-size: 18px;"></i></button>
 </div>
-<div class="modal-body">
+<div class="modal-body py-2">
     <span>{{message}}</span>
 </div>
-<div class="modal-footer">
-    <button type="button" class="btn" (click)="closeModal('dismiss')">Cancel</button>
-    <button type="button" class="btn btn-{{themeClass}}" (click)="closeModal('confirm')">{{action}}</button>
+<div class="modal-footer border-top-0">
+    <button type="button" class="btn btn-secondary" (click)="closeModal('dismiss')">Cancel</button>
+    <button type="button" class="btn btn-{{themeClass}}" (click)="closeModal('confirm')" ngbAutofocus>{{action}}</button>
 </div>
