--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -1,32 +1,27 @@
 <div class="d-flex align-items-center text-nowrap bg-white border-bottom px-3 py-2 sticky-top">
-    <div class="bg-transparent-primary rounded h5 d-flex align-items-center justify-content-center mb-0 me-2"
-        style="width: 32px; height: 32px;">
-        <i class="fa-solid fa-address-book"></i>
+    <div class="bg-transparent-primary rounded h5 p-2 mb-0 me-2 text-center">
+        <i class="fa-solid fa-address-book" style="width: 20px;"></i>
     </div>
     <h4 class="me-auto my-0">Clients</h4>
-    <button class="btn bg-secondary ms-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-        <i class="fa-solid fa-filter me-2"></i>More Filters
-    </button>
-    <button class="btn bg-secondary ms-2" (click)="clearFilters()">
-        <i class="fa-solid fa-filter-circle-xmark me-2"></i>Clear Filters
-    </button>
-    <button class="btn bg-secondary ms-2" (click)="refreshClientList()">
-        <i class="fa-solid fa-refresh me-2"></i>Refresh List
-    </button>
-    <button class="btn bg-secondary ms-2" (click)="exportExcel()">
-        <i class="fa-solid fa-download me-2"></i>Export Excel
+    <button class="btn btn-secondary ms-2" (click)="exportExcel()">
+        <i class="fa-solid fa-file-excel me-2"></i>Export Excel
     </button>
     <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)">
         <i class="fa-solid fa-plus me-2"></i>Add New Client
     </button>
 </div>
 <div class="d-flex align-items-center text-nowrap p-3">
-    <div class="input-group flex-nowrap" style="width: 340px;">
-        <span class="input-group-text border bg-white">
-            <i class="fa-solid fa-magnifying-glass" style="transform: translateY(1px);"></i>
-        </span>
-        <input type="text" class="form-control border" placeholder="Search name, surname, company..."
+    <div class="input-group flex-nowrap" style="width: 500px;">
+        <i class="fa-solid fa-magnifying-glass input-search-icon"></i>
+        <input type="text" class="form-control input-search border rounded-start" placeholder="Search name, surname, company..." value="{{search}}"
             (keyup)="searchClients($event)">
+        <button class="btn border bg-white" ngbTooltip="More Filters" placement="bottom" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasScrolling">
+            <i class="fa-solid fa-filter"></i>
+        </button>
+        <button class="btn border bg-white" ngbTooltip="Clear Filtes" placement="bottom" (click)="clearFilters()">
+            <i class="fa-solid fa-filter-circle-xmark"></i>
+        </button>
     </div>
     <span class="ms-2 me-auto">{{clients.length}} results found</span>
     <div class="dropdown ms-2">
@@ -97,7 +92,11 @@
                 <th scope="col">Added</th>
                 <th scope="col">Updated</th>
                 <th scope="col">Status</th>
-                <th scope="col" class="text-end"></th>
+                <th scope="col" class="text-end">
+                    <button class="btn text-white py-0" ngbTooltip="Refresh" placement="bottom" (click)="refreshClientList()">
+                        <i class="fa-solid fa-refresh"></i>
+                    </button>
+                </th>
             </tr>
             <tr *ngIf="gettingClientSet" class="align-middle">
                 <td colspan="12" class="text-center">
@@ -159,7 +158,7 @@
                     <small class="text-muted" *ngIf="client.addedDays! == 0">Today</small>
                 </td>
                 <td>
-                    <span class="d-block">{{client.dateUpdated | date: "mediumDate"}}</span>
+                    <span class="d-block">{{client.dateUpdated | date: "mediumDate"}} {{client.dateUpdated | date: "shortTime"}}</span>
                     <small class="text-muted" *ngIf="client.updatedDays! < -1">{{client.lastContactedDays!
                         * -1}} days ago</small>
                     <small class="text-muted" *ngIf="client.updatedDays! == -1">Yesterday</small>
@@ -174,11 +173,9 @@
                 <td>
                     <div class="d-flex justify-content-end">
                         <div class="dropdown">
-
                             <button class="btn btn-secondary" (click)="openClientDetailsDialog(client.id)"><i
                                     class="fa-solid fa-folder-open me-2"></i>Details</button>
-                            <button class="btn" data-bs-toggle="dropdown" ngbTooltip="Actions"
-                                placement="bottom">
+                            <button class="btn" data-bs-toggle="dropdown" ngbTooltip="Actions" placement="bottom">
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </button>
                             <ul class="dropdown-menu">
@@ -228,7 +225,7 @@
 <div class="offcanvas offcanvas-end " data-bs-scroll="true" data-bs-backdrop="false" id="offcanvasScrolling">
     <div class="offcanvas-header border-bottom border-top justify-content-start">
         <h5 class="offcanvas-title">Filters</h5>
-        <button class="btn-close ms-auto" data-bs-dismiss="offcanvas"></button>
+        <button class="btn p-0 ms-auto" ngbTooltip="Close" placement="bottom" data-bs-dismiss="offcanvas"><i class="fa-solid fa-xmark" style="font-size: 18px;"></i></button>
     </div>
     <div class="offcanvas-body">
         <app-client-filters></app-client-filters>
